# my-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/fdm_slicer/: __init__.py  cli.py  config.py  gcode.py  geometry.py  pipeline.py  toolpath.py
tests/: test_pipeline.py
